@@ -11,6 +11,7 @@ Changes for Perl programming language extension Module-Install
 	- Support code.google.com bugtracker (CHORNY)
 	- If the DSL code fails, say why (ADAMK)
 	- autoinstall doesn't die on CPAN-1.81 (JJORE)
+	- Check 'copyrights' section for license also (CHORNY)
 
 0.91 Thu 28 May 2009
 	- Add missing dependency on Parse::CPAN::Meta
